# BLE_Serial

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  annotated.html  bluetooth_8hpp_source.html  class_b_l_e___serial_1_1_bluetooth_1_1_bluetooth_exception-members.html  class_b_l_e___serial_1_1_bluetooth_1_1_bluetooth_exception.html  class_b_l_e___serial_1_1_bluetooth_1_1_i_bluetooth_connection-members.html  class_b_l_e___serial_1_1_bluetooth_1_1_i_bluetooth_connection.html  class_b_l_e___serial_1_1_bluetooth_1_1_i_bluetooth_device-members.html  class_b_l_e___serial_1_1_bluetooth_1_1_i_bluetooth_device.html  class_b_l_e___serial_1_1_bluetooth_1_1_i_bluetooth_gatt_characteristic-members.html  class_b_l_e___serial_1_1_bluetooth_1_1_i_bluetooth_gatt_characteristic.html  class_b_l_e___serial_1_1_bluetooth_1_1_i_bluetooth_gatt_service-members.html  class_b_l_e___serial_1_1_bluetooth_1_1_i_bluetooth_gatt_service.html  class_b_l_e___serial_1_1_bluetooth_1_1_i_bluetooth_service-members.html  class_b_l_e___serial_1_1_bluetooth_1_1_i_bluetooth_service.html  class_b_l_e___serial_1_1_c_o_m_1_1_c_o_m_exception-members.html  class_b_l_e___serial_1_1_c_o_m_1_1_c_o_m_exception.html  class_b_l_e___serial_1_1_c_o_m_1_1_c_o_m_port-members.html  class_b_l_e___serial_1_1_c_o_m_1_1_c_o_m_port.html  classes.html  com_8hpp_source.html  dir_5f81ba4fea2c759bf4952a364d47f5f2.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  menudata.js  namespace_b_l_e___serial_1_1_bluetooth.html  namespace_b_l_e___serial_1_1_c_o_m.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  (+2 more)
(+44 files in other folders)
